// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Danger 1`] = `
<div
  className="center"
>
  <button
    className="button danger"
  >
    Danger
  </button>
</div>
`;

exports[`Storyshots Button Primary 1`] = `
<div
  className="center"
>
  <button
    className="button primary"
  >
    Primary
  </button>
</div>
`;

exports[`Storyshots Button Secondary 1`] = `
<div
  className="center"
>
  <button
    className="button secondary"
  >
    Secondary
  </button>
</div>
`;

exports[`Storyshots Button Success 1`] = `
<div
  className="center"
>
  <button
    className="button success"
  >
    Success
  </button>
</div>
`;

exports[`Storyshots InboxScreen Default 1`] = `
<div
  className="page lists-show"
>
  <nav>
    <h1
      className="title-page"
    >
      <span
        className="title-wrapper"
      >
        Taskbox
      </span>
    </h1>
  </nav>
  <div
    className="list-items"
  >
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          style={
            Object {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Task 1"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          style={
            Object {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Task 2"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          style={
            Object {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Task 3"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          style={
            Object {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Task 4"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          style={
            Object {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Task 5"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          style={
            Object {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Task 6"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots InboxScreen Error 1`] = `
<div
  className="page lists-show"
>
  <div
    className="wrapper-message"
  >
    <span
      className="icon-face-sad"
    />
    <div
      className="title-message"
    >
      Oh no!
    </div>
    <div
      className="subtitle-message"
    >
      Something went wrong
    </div>
  </div>
</div>
`;

exports[`Storyshots Input Large 1`] = `
<div
  className="center"
>
  <input
    className="input large"
    placeholder="Large field"
  />
</div>
`;

exports[`Storyshots Input Medium 1`] = `
<div
  className="center"
>
  <input
    className="input medium"
    placeholder="Medium field"
  />
</div>
`;

exports[`Storyshots Input Small 1`] = `
<div
  className="center"
>
  <input
    className="input small"
    placeholder="Small size"
  />
</div>
`;

exports[`Storyshots Task Archived 1`] = `
<div
  className="list-item TASK_ARCHIVED"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={true}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      className="checkbox-custom"
      onClick={[Function]}
    />
  </label>
  <div
    className="title"
  >
    <input
      placeholder="Input title"
      readOnly={true}
      style={
        Object {
          "textOverflow": "ellipsis",
        }
      }
      type="text"
      value="Test Task"
    />
  </div>
  <div
    className="actions"
    onClick={[Function]}
  />
</div>
`;

exports[`Storyshots Task Default 1`] = `
<div
  className="list-item TASK_INBOX"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={false}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      className="checkbox-custom"
      onClick={[Function]}
    />
  </label>
  <div
    className="title"
  >
    <input
      placeholder="Input title"
      readOnly={true}
      style={
        Object {
          "textOverflow": "ellipsis",
        }
      }
      type="text"
      value="Test Task"
    />
  </div>
  <div
    className="actions"
    onClick={[Function]}
  >
    <a
      onClick={[Function]}
    >
      <span
        className="icon-star"
      />
    </a>
  </div>
</div>
`;

exports[`Storyshots Task Pinned 1`] = `
<div
  className="list-item TASK_PINNED"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={false}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      className="checkbox-custom"
      onClick={[Function]}
    />
  </label>
  <div
    className="title"
  >
    <input
      placeholder="Input title"
      readOnly={true}
      style={
        Object {
          "textOverflow": "ellipsis",
        }
      }
      type="text"
      value="Test Task"
    />
  </div>
  <div
    className="actions"
    onClick={[Function]}
  >
    <a
      onClick={[Function]}
    >
      <span
        className="icon-star"
      />
    </a>
  </div>
</div>
`;

exports[`Storyshots TaskList Default 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="list-items"
  >
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          style={
            Object {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Task 1"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          style={
            Object {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Task 2"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          style={
            Object {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Task 3"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          style={
            Object {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Task 4"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          style={
            Object {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Task 5"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          style={
            Object {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Task 6"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskList Empty 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="list-items"
  >
    <div
      className="wrapper-message"
    >
      <span
        className="icon-check"
      />
      <div
        className="title-message"
      >
        You have no tasks
      </div>
      <div
        className="subtitle-message"
      >
        Sit back and relax
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskList Loading 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="list-items"
  >
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskList With Pinned Tasks 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="list-items"
  >
    <div
      className="list-item TASK_PINNED"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          style={
            Object {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Task 6 (pinned)"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          style={
            Object {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Task 1"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          style={
            Object {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Task 2"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          style={
            Object {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Task 3"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          style={
            Object {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Task 4"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          style={
            Object {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Task 5"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;
